# groove

./: .gitignore  CHANGELOG.md  Cargo.toml  READINESS.md  README.adoc  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  proofs.yml
cli/: Cargo.toml
cli/src/: canonical.rs  detect.rs  init.rs  lib.rs  main.rs  probe.rs  registry.rs  sign.rs  timefmt.rs  validate.rs
cli/tests/: check_compat_table.rs  registry_consistency.rs  validate_manifest.rs
clients/browser-extension/: README.md  manifest.json
clients/browser-extension/background/: groove-client.vendor.js  groove-discovery.js  groove-targets.gen.js
clients/browser-extension/content/: groove-bridge.js
clients/browser-extension/popup/: popup.html  popup.js
clients/browser-extension/scripts/: gen-icons.mjs  gen-targets.mjs
clients/js/: groove-client.js
docs/: GROOVE-CLI-DESIGN.adoc  POSITIONING.adoc  REPO-LAYOUT.adoc  exceptional-protocols.tex  graduated-trust.tex  groove-paper.tex  protocol-factory.tex  typing-the-boundaries.tex
docs/archive/: groove-sexpr-manifest.a2ml
docs/decisions/: 0001-canonical-repo.adoc  0002-manifest-encodings.adoc  0003-version-line.adoc  0004-licensing.adoc  0005-browser-extension.adoc  0006-port-registry.adoc  0007-cleave-separate.adoc  0008-sprawl-standard.adoc  0009-the-joinery-naming-canon.adoc  0010-manifest-signing.adoc  0011-version-line-0-3-0.adoc
examples/: burble-manifest.a2ml  minimal-manifest.a2ml  minimal-manifest.json  soft-hard-lease-demo.sh
harness/: groove-harness.js
harness/groove-panel-template/: panel.html
proofs/: README.adoc
provider/: Cargo.toml
provider/src/: lib.rs  main.rs
provider/tests/: conformance.rs  probe_integration.rs  signing.rs
reference/groove-proxy/: GrooveProxy.idr  README.adoc
reference/ipv6t/: build.zig
reference/ipv6t/bench/: grv6_bench.zig
registry/: groove-registry.json
spec/: CONFORMANCE.adoc  INNERVATION-SIGNALS.adoc  IPV6T.adoc  LAYERING.adoc  MODULARITY.adoc  SPEC.adoc  TRANSPORT.adoc
(+4 files in other folders)
