# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[workspace]
resolver = "3"
members = ["cli", "provider"]

# Applies to the whole workspace; member profiles would be ignored anyway.
[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
