# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <j.d.a.jewell@open.ac.uk>

[package]
name = "groove"
version = "0.2.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "CLI tool for the Groove service discovery protocol — init, validate, probe, mesh"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/groove-protocol"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
regex = "1"
colored = "3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "io-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
